# lotto_jocker

./: CMakeLists.txt  lotto_jocker  main.c
cmake/: cmake_uninstall.in
