# Ορίζει την ελάχιστη έκδοση του CMake που απαιτείται
cmake_minimum_required(VERSION 3.10)

# Ορίζει το όνομα του έργου
project(LotteryGenerator C)

# Ορίζει το πρότυπο της C που θα χρησιμοποιηθεί (π.χ., C11)
# Αυτό είναι χρήσιμο για τη χρήση τύπων όπως η bool (<stdbool.h>)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Ορίζει το όνομα του εκτελέσιμου αρχείου (π.χ. 'lottery')
set(EXECUTABLE_NAME lottery)

# Ορίζει τα αρχεία πηγής
# Υποθέτουμε ότι όλος ο κώδικας είναι στο αρχείο main.c
set(SOURCE_FILES 
    main.c
    # Αν είχατε άλλα αρχεία .c, θα τα προσθέτατε εδώ
)

# Δημιουργεί το εκτελέσιμο
add_executable(${EXECUTABLE_NAME} ${SOURCE_FILES})

# Συνδέει τη βιβλιοθήκη 'm' (μαθηματικών) αν χρειαστεί, και άλλες βιβλιοθήκες.
# Αν και το πρόγραμμά σας δεν κάνει μαθηματικές πράξεις,
# η system() μπορεί να επηρεάζεται. Επιπλέον, το system()
# χρειάζεται συνήθως τη libc, η οποία συνδέεται αυτόματα.
# Αν εμφανιστούν σφάλματα κατά τη μεταγλώττιση, αφαιρέστε την παρακάτω γραμμή.
# target_link_libraries(${EXECUTABLE_NAME} m)